--- a/package.json
+++ b/package.json
@@ -31,5 +31,9 @@
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
     "vite": "^5.3.1"
-  }
+  },
+  "engines": {
+  "node": ">=14.x"
+}
+
 }
